fixed test warnings